--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-tsrouter-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Fonts (Rozha One, Inter) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,7 +18,11 @@
       rel="stylesheet"
     />
 
-    <title>Create TanStack App - donboscoschool</title>
+    <title>Don Bosco H.S. School, Kokrajhar</title>
+    <meta
+      name="description"
+      content="Don Bosco High School in Kokrajhar provides quality education with Christian values. Our dedicated faculty focuses on academic excellence and holistic development of students through curricular and co-curricular activities."
+    />
   </head>
   <body>
     <div id="app"></div>
